fixed h3 on mobile

--- a/music.css
+++ b/music.css
@@ -174,3 +174,11 @@ audio::-webkit-media-controls-panel {
 footer {
   margin-top: 3rem;
 }
+
+@media (max-width: 768px) {
+  .header-left {
+    float: none;
+    text-align: center;
+    margin-right: 0;
+  }
+}
