--- a/poetry.css
+++ b/poetry.css
@@ -133,3 +133,11 @@ h1 {
 footer {
   margin-top: 3rem;
 }
+
+@media (max-width: 768px) {
+  .header-left {
+    float: none;
+    text-align: center;
+    margin-right: 0;
+  }
+}
