--- a/socials.css
+++ b/socials.css
@@ -206,3 +206,11 @@ footer {
 .footer-link:hover {
     color: #fff
 }
+
+@media (max-width: 768px) {
+  .header-left {
+    float: none;
+    text-align: center;
+    margin-right: 0;
+  }
+}
